org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI

ChangeLog

2003-03-27
	- UriResolver: some doc updates and minor code re-arrangements (no changes in logic)
	
	- JenaUtil2: some pending renamings done:
		getURIForBase --> removeTrailingFragment
		getURIForNS   --> appendFragment
	
	- Sparql: enabling DESCRIBE responses
	
2003-03-21
	- Just comment about Omv.acronym saying that is about "resourceType" not "shortName"
       
	 
2003-03-19:   (1.0.0.beta)
	- Issue 8: "Improve HTML response"
	  Added a header with logo and links to semanticframework

2003-03-17:   (0.2.0.beta7)
	- Code clean-up:
		- Removed unused types: MdDispatcher, MdHelper, AttrGroup, AttrDef.
		  Medatada is handled in "ontmd" project. See 2008-11-14 comment below.
		
		
		
2003-03-16:
	- Fixed Issue 102: "searches should be against the "unversioned" form of the latest ontologies"
 	  See OntGraph.
 	  NOTE: *only* the "unversioned" latest versions are loaded into the graph so all
	  responses will be now in unversioned form.
	  Fix available as of 0.2.0.beta6
	  
	- Sparql: make links for good URLs in html response. The ones that are good MmiUri's are
	  appended ".html" so the HTML output format is transferred for subsequent resolution.
	  This fixes Issue 103: "make links for well formed URLs in HTML query reponse"
 	  

2009-03-15:
	- Fixed issue 101: "Inexistent term is resolved"
	  The "problem" was that model.getResource "behaves identically to createResource(String)"
	  so it *creates* a fresh resource if the resource does NOT exist!
	  See http://jena.sourceforge.net/javadoc/com/hp/hpl/jena/rdf/model/Model.html#getResource(java.lang.String)
	  I was using the call ``termRes = model.getResource(termUri)'', along with a termRes != null check to 
	  determine the existence of the term. The fix is to use an explicit "contains" check.
	  Also removed the try with the "#" separator as we are now only using "/".
	  A 404 is returned now as well.